Bugfix: dropdown arrows in firefox wrong positioned

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -232,6 +232,12 @@
 	position: relative;
 }
 
+@-moz-document url-prefix() {
+    #new-roster-form .btn .caret {
+		top: -11px;
+	}
+}
+
 #new-roster-form .btn {
 	text-align: left;
 }
